Add] gitignore Add

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+GoogleService-Info.plist
+
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,swift,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,swift,macos
 
