--- a/YGGG/GoogleService-Info.plist
+++ b/YGGG/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>215500634278-sni63mrum2lpj8etdcs1pkvq5nedaoup.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.215500634278-sni63mrum2lpj8etdcs1pkvq5nedaoup</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDJ-jNTL1hqfZeTqXFg2Y9O0O3gZZAWO9U</string>
 	<key>GCM_SENDER_ID</key>
